--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- ... -->
-            <!-- A-Frame VR Library -->
-            <script src="https://aframe.io/releases/latest/aframe.js"></script>
+       <meta charset="utf-8">
+       <title>OBJ brain</title>
+        <meta name="description" content="Hello, World! • A-Frame">
+            <script src="aframe.js"></script>
             <!-- Component -->
             <script src="dist/aframe-obj-loader-component.js"></script>
         <!-- ... -->
