--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
             <script src="dist/aframe-obj-loader-component.js"></script>
     </head>
     <body>
-            <a-entity position= "5 0 -10" 
-                obj-loader="src: ./wholeBrain.obj";>
+            <a-entity position= "5 0 -10" obj-loader="src: url(./wholeBrain.obj)";>
             </a-entity>
     </body>
 </html>
