fixes to src and a-scene

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <meta charset="utf-8">
        <title>Brain</title>
         <meta name="description" content="Aframe">
-        <script src="aframe.js"></script>
+        <script src="https://aframe.io/releases/latest/aframe.js"></script>
         <script src="dist/aframe-obj-loader-component.js"></script>
     </head>
     <body>
