--- a/index.html
+++ b/index.html
@@ -2,15 +2,22 @@
 <html>
     <head>
        <meta charset="utf-8">
-       <title>Brain</title>
+       <title>FSurfer_Brain</title>
         <meta name="description" content="Aframe">
         <script src="https://aframe.io/releases/latest/aframe.js"></script>
         <script src="dist/aframe-obj-loader-component.js"></script>
     </head>
     <body>
         <a-scene>
-            <a-entity position= "5 0 -10" obj-loader="src: url(./wholeBrain.obj); mtl:url(./wholeBrain.mtl);">
+            <a-entity position= "5 0 -20" 
+                scale= "0.1 0.1 0.1"
+                material="color: #ffffe5; opacity: 1"
+                obj-loader="src: url(./wholeBrain.obj);">
+                     <a-animation attribute="rotation" from="0 0 0" to="0 360 0" dur="15000"repeat="indefinite" easing="linear"></a-animation>
             </a-entity>
+
+         <a-sky color="#f2f2f2"></a-sky>
+         
         </a-scene>
     </body>
 </html>
