--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
         <a-scene>
              
 
-         <a-entity id="link" geometry="primitive: sphere; radius: 0.5" material="color: #000; opacity: 0.8; transparent: false" position="0 3 0"></a-entity>
-          <a-entity id="camera" position="0 1.8 5">
-            <a-entity camera look-controls="true">
-              <a-entity cursor="fuse: true; timeout: 100" geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.05" material="color: red" position="0 0 -2"></a-entity>
+         <a-entity id="Alink" geometry="primitive: sphere; radius: 0.3" material="color: red; opacity: 0.5; transparent: false" position="3 1 -4"></a-entity>
+         <a-entity id="Blink" geometry="primitive: sphere; radius: 0.3" material="color: red; opacity: 0.5; transparent: false" position="5 1 -8"></a-entity>
+          <a-entity id="Clink" geometry="primitive: sphere; radius: 0.3" material="color: red; opacity: 0.5; transparent: false" position="7 1 -12"></a-entity>
+          <a-entity id="Dlink" geometry="primitive: sphere; radius: 0.3" material="color: red; opacity: 0.5; transparent: false" position="5 3 -12"></a-entity>
+
+          <a-entity id="camera" position="0 0 0">
+            <a-entity camera look-controls= "true" wasd-controls="true">
+              <a-entity cursor="fuse: true; timeout: 100" geometry="primitive: ring; radiusInner: 0.007; radiusOuter: 0.02" material="color: red" position="0 0 -2"></a-entity>
             </a-entity>
-            <a-animation attribute="position" begin="navigate-to-link" to="0 2 2" dur="5000"></a-animation>          
+            <a-animation attribute="position" begin="navigate-to-link" to="3 1 -4" dur="10000"></a-animation>   
+            <a-animation attribute="position" begin="Blinkn" to="5 1 -8" dur="10000"></a-animation> 
+            <a-animation attribute="position" begin="Clinkn" to="7 1 -14" dur="10000"></a-animation> 
+             <a-animation attribute="position" begin="Dlinkn" to="5 3 -12" dur="10000"></a-animation>        
           </a-entity>
 
 
@@ -88,8 +95,17 @@
 
   <script language="javascript">
 
-document.querySelector('#link').addEventListener('click', function () {
+document.querySelector('#Alink').addEventListener('click', function () {
   document.querySelector('#camera').emit('navigate-to-link');
+});
+document.querySelector('#Blink').addEventListener('click', function () {
+  document.querySelector('#camera').emit('Blinkn');
+});
+document.querySelector('#Clink').addEventListener('click', function () {
+  document.querySelector('#camera').emit('Clinkn');
+});
+document.querySelector('#Dlink').addEventListener('click', function () {
+  document.querySelector('#camera').emit('Dlinkn');
 });
 </script>
 
