--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
        <meta charset="utf-8">
-        <title>FSurfer_Brain</title>
+        <title>Surfer_Brain</title>
         <meta name="description" content="Aframe">
         <script src="https://aframe.io/releases/latest/aframe.js"></script>
         <script src="dist/aframe-obj-loader-component.js"></script>
