make changes to add more models

--- a/index.html
+++ b/index.html
@@ -27,6 +27,55 @@
           </a-entity>
 
             
+             <a-entity position= "0 0 -20" 
+                scale= "0.1 0.1 0.1"
+                rotation="0 180 0"
+                material="color: #ffffe5; opacity: 0.5"
+                obj-loader="src: url(./wholeBrain.obj);">
+                   <a-animation attribute="position" from"0 0 0" to="0 0 -20" repeat="indefinite" ease="linear" begin="10000" dur="1"></a-animation>
+            </a-entity>
+              <a-entity position= "0 0 -20" 
+                scale= "0.1 0.1 0.1"
+                rotation= "270 180 0"
+                material="color: red; opacity: 1"
+                obj-loader="src: url(./CerebellumProper.obj);">
+            </a-entity>
+             <a-entity position= "0 0 -20" 
+                scale= "0.1 0.1 0.1"
+                rotation= "270 180 0"
+                material="color: blue; opacity: 1"
+                obj-loader="src: url(./amygdala.obj);">
+            </a-entity>
+            <a-entity position= "0 0 -20" 
+                scale= "0.1 0.1 0.1"
+                rotation= "270 180 0"
+                material="color: green; opacity: 1"
+                obj-loader="src: url(./aseg_016.obj);">
+            </a-entity>
+            <a-entity position= "0 0 -20" 
+                scale= "0.1 0.1 0.1"
+                rotation= "270 180 0"
+                material="color: yellow; opacity: 1"
+                obj-loader="src: url(./CC2.obj);">
+            </a-entity>
+            <a-entity position= "0 0 -20" 
+                scale= "0.1 0.1 0.1"
+                rotation= "270 180 0"
+                material="color: pink; opacity: 1"
+                obj-loader="src: url(./cerebellum.obj);">
+            </a-entity>
+            <a-entity position= "0 0 -20" 
+                scale= "0.1 0.1 0.1"
+                rotation= "270 180 0"
+                material="color: black; opacity: 1"
+                obj-loader="src: url(./hippocampus.obj);">
+            </a-entity>
+            <a-entity position= "0 0 -20" 
+                scale= "0.1 0.1 0.1"
+                rotation= "270 180 0"
+                material="color: white; opacity: 1"
+                obj-loader="src: url(./hippo.obj);">
+            </a-entity>
             <a-entity position= "0 0 -20" 
                 scale= "0.1 0.1 0.1"
                 rotation= "270 180 0"
